<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/player_name"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/player_name" />

    <TextView
        android:id="@+id/era"

        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0_00"/>

    <TextView
        android:id="@+id/ip"

        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0_0"/>

    <TextView
        android:id="@+id/h"

        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/er"

        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/hr"

        android:layout_width="@dimen/pitching_stat_width"

        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/bb"
        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/so"

        android:layout_width="@dimen/pitching_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <Button
        android:id="@+id/show_more_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="More"
        android:minHeight="8dp"
        />


</LinearLayout>