<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamActivity"
    android:background="@drawable/bbhome">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




    <EditText
        android:id="@+id/team_name"
        android:theme="@style/StartText"
        android:textColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Team Name"/>


    <Button
        android:id="@+id/make_Team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add/edit"/>

        <Spinner
            android:id="@+id/player_name"

            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_name"/>
        <Button
            android:id="@+id/remove_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_player"
            />


        <EditText
            android:id="@+id/player_to_add"
            android:theme="@style/StartText"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Player Name"/>

        <Button
        android:id="@+id/add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>