<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/player_name" />

    <TextView
        android:id="@+id/avg"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0_000"/>

    <TextView
        android:id="@+id/obp"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0_000"/>

    <TextView
        android:id="@+id/abs"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/ops"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0_000"/>

    <TextView
        android:id="@+id/hrs"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/ks"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/bbs"
        android:layout_width="@dimen/batting_stat_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/batting_stat_text_size"
        android:text="@string/_0"/>

</LinearLayout>