<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LineupActivity">

    <Button
        android:id="@+id/save_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Save and Close" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/home_away_radio_group"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/home_radio_button"
            android:layout_marginRight="20dp"
            android:textSize="30dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away"
            android:id="@+id/away_radio_button"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"/>

    </RadioGroup>

<!--    <EditText-->
<!--        android:id="@+id/enter_player"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="text"-->
<!--        android:maxLines="1"-->
<!--        android:textSize="30sp"-->
<!--        android:hint="@string/enter_player_name"-->
<!--        android:autofillHints=""-->
<!--        app:layout_constraintRight_toLeftOf="@+id/add_button"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/home_away_radio_group" />-->

    <Spinner
        android:id="@+id/enter_player_spinner"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/add_button"
        app:layout_constraintBottom_toBottomOf="@id/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_button">

    </Spinner>

    <Button
        android:id="@+id/add_button"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_away_radio_group" />

    <TextView
        android:id="@+id/pitcher_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/pitcher_spinner"
        android:text="@string/pitcher_label"
        app:layout_constraintTop_toBottomOf="@id/enter_player_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="30dp"
        />

    <Spinner
        android:id="@+id/pitcher_spinner"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/pitcher_label"
        app:layout_constraintBottom_toBottomOf="@id/pitcher_label"
        app:layout_constraintLeft_toRightOf="@id/pitcher_label"
        app:layout_constraintRight_toRightOf="parent">

    </Spinner>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lineup_recyler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/pitcher_label"
        app:layout_constraintBottom_toBottomOf="parent"/>








</androidx.constraintlayout.widget.ConstraintLayout>